자바스크립트 적용

--- a/stx_tt.html
+++ b/stx_tt.html
@@ -43,6 +43,12 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/stx_tt.css" />
+    <!-- 자바스크립트 -->
+    <script src="js/script.js" defer></script>
+    <!-- IE 아래는 HTM5 태그를 지원하지 않는다.-->
+    <script src="js/html5shiv.js"></script>
+    <!-- css3 적용 -->
+    <script src="js/prefixfree.min.js"></script>
     <title>STX건설_선생님</title>
   </head>
   <body>
@@ -132,7 +138,7 @@
             </div>
         </section>
         <!--비지니스  -->
-        <section class="business">
+        <section class="business" id="business">
             <div class="business-inner container" >
                 <div class="business-top">
                     <h2 class="business-title">
@@ -271,7 +277,7 @@
             </div>
         </section>
         <!-- 하단 -->
-        <footer class="footer">
+        <footer class="footer" id="footer">
             <div class="footer-inner container">
                 <!-- 하단이미지 -->
                 <a href="#" class="footer-logo">
