--- a/stx_tt.html
+++ b/stx_tt.html
@@ -52,6 +52,18 @@
     <title>STX건설_선생님</title>
   </head>
   <body>
+    <!-- top버튼 -->
+    <div class="top-button">
+        <a href="#" class="chat-btn">
+            <img src="images/chat_img.png" alt="chat">
+            <span>무엇을 도와드릴까요?</span>
+        </a>
+        <a href="#" class="shop-btn">STX</a>
+        <a href="#" class="top-btn" id="top-btn">
+            <img src="images/top-btn.png" alt="top-btn" id="top-btn-img">
+        </a>
+    </div>
+
     <div class="wrap">
         <!-- 헤더 -->
         <header class="header">
