top버튼 완성 top버튼  화살표 방향 바꾸는 기능 구현

--- a/stx_tt.html
+++ b/stx_tt.html
@@ -42,7 +42,7 @@
     <!-- css초기화 -->
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/stx-tt.css" />
+    <link rel="stylesheet" href="css/stx_tt.css" />
     <!-- 자바스크립트 -->
     <script src="js/script.js" defer></script>
     <!-- IE 아래는 HTM5 태그를 지원하지 않는다.-->
